# Leos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/: cases.py  runner.py
benchmarks/safety/: audit_secret_payload.json  container_command_hardening.json  container_without_runner_blocked.json  fake_github_client_token_storage.json  github_duplicate_pr_idempotency.json  github_plain_token_rejected.json  github_update_without_expected_guard.json  network_ssrf_dns_private_ip.json  prompt_injection_grant_permission.json  prompt_injection_policy_override.json  prompt_injection_reveal_secret.json  rollback_failure_manual_recovery.json  runtime_store_token_string.json  trace_secret_rendering.json
docs/: APPROVAL_UX.md  ARCHITECTURE.md  CAUSAL_CONTRACTS.md  COMPARISON.md  CONFLICTS.md  DEV_AGENT.md  EVALS.md  FUZZING.md  MUTATION_TESTING.md  NETWORK_SECURITY.md  NETWORK_TOOLS.md  ROADMAP.md  SANDBOXING.md  SIMULATION.md  STORAGE.md  THREAT_MODEL.md  TOOL_MANIFESTS.md  TRACE_VIEWER.md
docs/proofs/: ARCHITECTURE_CLAIMS.md  COVERAGE_SUMMARY.md  KNOWN_LIMITATIONS.md  MANIFEST.json  PRODUCTION_READINESS.md  PROOF_INDEX.md  README.md  SAFETY_EVAL_RESULTS.md  (+5 more)
examples/: README.md
scripts/: check_no_secret_literals.py  fuzz_smoke.py  generate_proofs.py  mutation_smoke.py  scan_artifacts_for_secrets.py
tests/: test_agent_loop.py  test_approval_request.py  test_audit_sanitization.py  test_causal_contract.py  test_cli.py  test_core.py  test_dev_tools.py  test_eval_runner.py  test_examples.py  test_github_agent_orchestration.py  test_github_real_write_gated.py  test_github_tools.py  test_github_tools_credentials.py  test_llm_planner.py  test_memory.py  test_network_tools.py  test_production_profile.py  test_proof_generation.py  test_properties.py  test_public_api.py  test_replanning.py  test_replay.py  test_runtime_store.py  test_sandbox.py  test_sandbox_docker.py  test_sanitization.py  test_schema_validation.py  test_secret_scan_script.py  test_simulation_conflicts.py  test_sqlite_store.py  test_task_queue_persistence.py  test_trace_viewer.py  test_untrusted_observation_guard.py
(+57 files in other folders)
