[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leos-agent"
version = "0.1.0"
description = "Safety-first autonomous agent kernel with causal checks, policy gates, transactions, memory, and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Leos"}]
keywords = ["agent", "autonomy", "safety", "causal", "transactions", "audit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
leos-agent = "leos_agent.cli:main"
leos = "leos_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
