[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leos-agent"
version = "0.1.0"
description = "Safety-first autonomous agent kernel with causal checks, policy gates, transactions, memory, and audit logs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Leos"}]
keywords = ["agent", "autonomy", "safety", "causal", "transactions", "audit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "coverage",
  "bandit",
  "hypothesis",
]

[project.scripts]
leos-agent = "leos_agent.cli:main"
leos = "leos_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM"]
ignore = ["N818", "N806"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
